15) netcwnmp: fix vpn managment.<br>
16) coovachilli: sync with git 09.04.2016 (commit 9f05673b).<br>
17) coovachilli: fix error in loading binary status file.<br>
18) coovachilli: fix sequence number in the TCP RESET.<br>
19) coovachilli: disable SSLv2 and SSLv3 protocol. Add sslciphers option.<br>
20) coovachilli: add layer3 support to kmod_coova_sync.<br>
21) init.d/goahead: add support KickStaRssiLowPSM.<br>
22) init.d/goahead: allow force only HW mode (default hibryd mode) for igmpsnooping.<br>
23) init.d: move tune roaming and advanced wifi parametrs to internet.sh (fix apply params by external logic reconfigure, as vlans and others).<br>
24) init.d: wifi params apply linerazed, remove unneded sleeps and avoid call for not existent interfaces.<br>
25) init.d: fix snooping in TV/SIP ports modes, use pure HW snooping (hibryd not support this modes now).<br>
26) kernel: ralink_wifi: add KickStaRssiLowPSM to allow different set levels for kick PSM clietns (prevent infinitive kick/reuse at some mobile clients).<br>
27) kernel: ralink_wifi: fix coexistence roaming and band steereing auth/probe reqests filter code.<br>
28) kernel: ralink_wifi: allow show band steering info with iwpriv.<br>
29) kernel: mips: cpu_name_string: Use raw_smp_processor_id().<br>
30) kernel: mips: upstream RIXI changes.<br>
31) kernel: mips: fix race condition in lazy cache flushing.<br>
32) kernel: mips: sync icache & dcache in set_pte_at.<br>
33) kernel: mips: revert: cache flush functions are reworked.<br>
34) kernel: mips: revert: fix bug in using flush_cache_vunmap.<br>
35) kernel: usb: qmi_wwan: add D-Link DWM-221 B1 device id.<br>
36) kernel: usb: cdc_ncm: adding Telit LE910 V2 mobile broadband card.<br>
37) kernel: net: ipv4: l2tp: fix a potential issue in l2tp_ip_recv.<br>
38) kernel: net: sock: convert sk_peek_offset functions to WRITE_ONCE.<br>
39) kernel: net: bridge: fix incorrect variable assignment on error path in br_sysfs_addbr.<br>
<br>
<br>
<br>